# dardcollect

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ANNOTATIONS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  config.yaml  js  pyproject.toml  temp_pipeline_output.txt
.claude/: DEVELOPMENT_SYSTEM.md  FEATURE_WORKFLOW.md  settings.json  settings.local.json
.claude/skills/keep-docs-navigable/: SKILL.md
.claude/skills/refactor-to-objective/: SKILL.md
.claude/skills/socraticode-index-first/: SKILL.md
.github/: copilot-instructions.md  copilot-tab-rules.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/instructions/: keep-docs-navigable.instructions.md  refactor-to-objective.instructions.md  socraticode-index-first.instructions.md
.github/prompts/: refactor-loop.prompt.md
configs/: config.archive_all.yaml  config.custom_audios.yaml  config.custom_images.yaml  config.custom_texts.yaml  config.custom_videos.yaml
dardcollect/: __init__.py  archive.py  audio.py  clip_extraction.py  config.py  detector.py  extraction_logger.py  face_crops.py  face_geometry.py  fair.py  frame_reader.py  frames.py  gpu_setup.py  ingest.py  magface.py  modality_loggers.py  ocr.py  onnx_manager.py  onnx_utils.py  orchestrator_plan.py  person_clips.py  person_clips_helpers.py  pipeline_loggers.py  pipeline_timer.py  pipeline_utils.py  poser.py  postprocessing.py  provenance.py  quality.py  quality_measures.py  tracker.py  tracker_kalman.py  tracker_ocsort.py
dardcollect/models/: INDEX.md  README_cigpose-m_coco-wholebody_256x192.md  README_clip_segmentation.md  README_expression_neutrality.md  README_face_mask_generation.md  README_face_occlusion_segmentation_ort.md  README_face_sharpness_rtree.md  README_magface_iresnet50_norm.md  README_mb1_120x120.md  README_ocsort.md  README_openai_whisper_small.md  README_paddleocr_ocr.md  README_scene_change_detector.md  README_ssim_248_model.md  README_yolox_tiny_8xb8-300e_humanart-6f3252f9.md  bisenet_400.onnx  ch_PP-LCNet_x1_0_textline_ori_cls_server.onnx  cigpose-m_coco-wholebody_256x192.onnx  cigpose-m_coco-wholebody_256x192.simplified.onnx
docs/: 0-GETTING-STARTED.md  0-QUICKSTART.md  1-ARCHITECTURE.md  2-LINEAGE.md  2-LOGGING.md  3-ANNOTATIONS.md  4-DEVELOPMENT.md  5-LIBRARY-API.md  CONTRIBUTING.md  PROGRESSIVE-WORKERS.md
persondet/: audio.py  config.py  detector.py  extraction_logger.py  face_geometry.py  fair.py  magface.py  ocr.py  onnx_manager.py  onnx_utils.py  pipeline_loggers.py  poser.py  postprocessing.py  provenance.py  tracker.py
persondet/models/: INDEX.md  README_bisenet_400.md  README_cigpose-m_coco-wholebody_256x192.md  README_clip_segmentation.md  README_expression_neutrality.md  README_face_occlusion_segmentation_ort.md  README_face_sharpness_rtree.md  README_magface_iresnet50_norm.md  README_mb1_120x120.md  README_ocsort.md  README_openai_whisper_small.md  README_paddleocr_ocr.md  README_scene_change_detector.md  README_ssim_248_model.md  README_yolox_tiny_8xb8-300e_humanart-6f3252f9.md  enet_b0_8_best_vgaf_embed_zeroed.onnx  enet_b2_8_embed_zeroed.onnx  face_occlusion_segmentation_ort.onnx  magface_iresnet50_norm.onnx  mb1_120x120.onnx  ofiq_config.jaxn  ssim_248_model.onnx
pipeline/: annotate_face_quality.py  download_media_from_archive.py  extract_audio_from_clips.py  extract_face_crops_from_images.py  extract_face_crops_from_videos.py  extract_frames_from_videos.py  extract_person_clips_from_videos.py  extract_persons_from_images.py  extract_text_from_doc.py  filter_face_crops_by_quality.py  generate_face_masks.py  transcribe_audio_files.py  transcribe_video_clips.py
schemas/: document_annotation_schema.json  face_crop_schema.json  image_detection_schema.json  person_clip_schema.json  quality_annotation_schema.json  transcription_schema.json
scripts/: annotate_face_quality.py  benchmark_pipeline.py  download_media_from_archive.py  download_videos_from_archive.py  extract_face_crops.py  extract_face_crops_from_images.py  extract_face_crops_from_videos.py  extract_frames_from_videos.py  extract_person_clips.py  extract_person_clips_from_videos.py  extract_persons_from_images.py  extract_text_from_doc.py  filter_face_crops_by_quality.py  golden_snapshot.py  make_fixture_media.py  make_test_config.py  objective_gate.py  run_pipeline.py  transcribe_audio_files.py  transcribe_clips.py  transcribe_video_clips.py
tests/: conftest.py  test_config.py  test_extraction_logger.py  test_fair.py  test_frame_masks_and_face_filter.py  test_run_pipeline_progressive.py  test_viewer_smoke.py
viewer/: detection_viewer.html  index_data.py  serve.py
viewer/css/: viewer-common.css  viewer-images.css  viewer-videos.css
viewer/js/: viewer-audio.js  viewer-common.js  viewer-config.js  viewer-documents.js  viewer-images.js  viewer-videos.js
