[project]
name = "dardcollect"
version = "0.1.0"
description = "Tools for building a labelled audiovisual dataset from public-domain archive film."
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "internetarchive>=3.0.0",
    "PyYAML",
    "opencv-python",
    "pyyaml>=6.0.1",
    "openai-whisper",
    "scipy",
    "requests",
    "tqdm",
    "jsonschema",
    "onnxruntime-gpu>=1.18.0,<1.26",
    # CUDA / cuDNN runtime libs ship inside the torch wheel (site-packages/torch/lib).
    # No need for the nvidia-*-cu12 PyPI packages.
    # CUDA-12 variant explicitly — matches torch+cu121. The unsuffixed `tensorrt`
    # meta-package defaults to the cu13 variant in TRT 10.7+, which would pull
    # libs built against CUDA 13 and mismatch the rest of the stack.
    "tensorrt-cu12>=10.1,<11",
    "opencv-python-headless>=4.9.0",
    "moviepy",
    "pdfplumber>=0.10.0",
    "pymupdf>=1.24.0",
    # `rapidocr` (v3+) no longer declares onnxruntime as a transitive dep
    # (unlike the legacy `rapidocr-onnxruntime` package). The user-installed
    # `onnxruntime-gpu` above provides the inference runtime.
    "rapidocr>=3.0,<4",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ty",
]
# Full tracking (requires compilation)
tracking = [
    "lap",
    "cython_bbox @ git+https://github.com/samson-wang/cython_bbox",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pipeline", "dardcollect"]

[project.scripts]
extract-person-clips = "pipeline.extract_person_clips_from_videos:main"
extract-frames = "pipeline.extract_frames_from_videos:main"

# ── Torch wheel selection ─────────────────────────────────────────────────────
# Pull torch/torchvision/torchaudio from the PyTorch cu121 index on every
# platform so the CUDA version is consistent (Linux + Windows). Default PyPI
# torch wheels would otherwise be Linux=cu124 and Windows=cpu — divergent and
# unhelpful. `explicit = true` keeps the index out of resolution for other
# packages.
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]
torchaudio = [{ index = "pytorch-cu121" }]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names, etc.)
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modernise Python syntax)
    "RUF",  # ruff-specific rules
    "RET",  # return statement simplifications
]
ignore = [
    "E402",   # module-level import not at top — intentional after gpu_setup
    "RUF002", # ambiguous Unicode in docstrings — intentional math/prose symbols
    "RUF003", # ambiguous Unicode in comments — intentional math/prose symbols
]

[tool.ruff.lint.isort]
known-first-party = ["dardcollect"]

[tool.ty.environment]
python = ".venv"

[tool.ty.rules]
unresolved-import = "warn"
no-matching-overload = "warn"
