[project]
name = "dardcollect"
version = "0.1.0"
description = "Tools for building a labelled audiovisual dataset from public-domain archive film."
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "internetarchive>=3.0.0",
    "PyYAML",
    "opencv-python",
    "pyyaml>=6.0.1",
    "openai-whisper",
    "scipy",
    "requests",
    "tqdm",
    "jsonschema",
    "onnx-simplifier>=0.4.36",
    # onnxruntime-gpu on Linux/Windows (has CUDA EP, falls back to CPU on CPU-only machines).
    # Plain onnxruntime on macOS (no GPU variant; uses CoreML EP on Apple Silicon).
    "onnxruntime-gpu>=1.18.0,<1.26; sys_platform != 'darwin'",
    "onnxruntime>=1.18.0,<1.26; sys_platform == 'darwin'",
    "opencv-python-headless>=4.9.0",
    "moviepy",
    "pdfplumber>=0.10.0",
    "pymupdf>=1.24.0",
    # `rapidocr` (v3+) no longer declares onnxruntime as a transitive dep
    # (unlike the legacy `rapidocr-onnxruntime` package).
    "rapidocr>=3.0,<4",
    # Default torch from PyPI (CPU on Linux/Win, MPS on macOS).
    # Use `cuda` extra for CUDA 12.1 wheels + TensorRT.
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    # TensorRT for accelerated inference (Linux/Windows only — no macOS wheels).
    "tensorrt-cu12>=10.1,<11; sys_platform != 'darwin'",
    "cuda-bindings>=13.3.1; sys_platform != 'darwin'",
]

dev = [
    "ruff",
    "ty",
]
# Full tracking (requires compilation)
tracking = [
    "lap",
    "cython_bbox @ git+https://github.com/samson-wang/cython_bbox",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pipeline", "dardcollect"]

[project.scripts]
extract-person-clips = "pipeline.extract_person_clips_from_videos:main"
extract-frames = "pipeline.extract_frames_from_videos:main"

# ── Torch wheel selection ─────────────────────────────────────────────────────
# PyPI torch on Windows is CPU-only (193MB). Use pytorch-cu121 index for CUDA.
# Linux/Windows: cu121 wheels (CUDA 12.1 support, works on CPU-only machines too).
# macOS: falls back to PyPI (MPS support built-in, no cu121 wheels exist).
# `cuda` extra adds TensorRT for accelerated inference.

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
# Route torch to cu121 on Linux/Windows for CUDA support.
# macOS has no cu121 wheels → falls back to PyPI (MPS built-in).
torch = [
    { index = "pytorch-cu121", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform != 'darwin'" },
]
torchaudio = [
    { index = "pytorch-cu121", marker = "sys_platform != 'darwin'" },
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names, etc.)
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modernise Python syntax)
    "RUF",  # ruff-specific rules
    "RET",  # return statement simplifications
]
ignore = [
    "E402",   # module-level import not at top — intentional after gpu_setup
    "RUF002", # ambiguous Unicode in docstrings — intentional math/prose symbols
    "RUF003", # ambiguous Unicode in comments — intentional math/prose symbols
]

[tool.ruff.lint.isort]
known-first-party = ["dardcollect"]

[tool.ty.environment]
python = ".venv"

[tool.ty.rules]
unresolved-import = "warn"
no-matching-overload = "warn"
